feat: update fthe textarea

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Virtual Keyboard created woth HTML, CSS and JavaScript</h1>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
-    
+    <textarea class="keyboard-output" name="" id="textarea" cols="30" rows="10"></textarea>
+
 </body>
 </html>
