--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <title>Virtual keyboard</title>
 </head>
 <body>
-    <h1>Virtua; keyboard with HTML, CSS & js</h1>
-    <textarea class="output" name="" id="" cols="30" rows="10"></textarea>
-    <div class="keyboard">
-        <div class="keyboard__keys">
+    <h1>Virtual keyboard with HTML, CSS & js</h1>
+    <textarea class="use-keyboard-input" style="width: 300px;"></textarea>
+    <!-- <div class="keyboard">
+       <div class="keyboard__keys">
             <button type="button" class="keyboard__key">a</button>
             <button type="button" class="keyboard__key keyboard__key--wide">
                 <i class="material-icons">backspace</i>
@@ -28,7 +28,7 @@
                 <i class="material-icons">check_circle</i>
             </button>
         </div>
-    </div>
+    </div> -->
     <script src="keyboard/keyboard.js"></script>
 </body>
 </html>
